21.07.2003	m. fuchs	extension of winefile for shell namespace
04.08.2003	m. fuchs	C++ explorer with architecture like MS Explorer:
						usage of IShellView C++, implementation of IShellBrowser, ...
09.08.2003	m. fuchs	class DesktopWindow for shell view on the desktop
11.08.2003	m. fuchs	class BackgroundWindow for painting of desktop background
						open child folders by double click in ShellBrowserChild
13.08.2003	m. fuchs	make explorer bar look more like windows taskbar bar
16.08.2003	m. fuchs	first draft of working task bar
18.08.2003	m. fuchs	first draft of explorer start menu
21.08.2003	m. fuchs	working start menu; beginning of tray notification area
						Start menu popup is now closed when clicking in another window.
22.08.2003	m. fuchs	implemented clock display in tray notification area
						implemented quick launch bar
23.08.2003	m. fuchs	implemented "Run..." dialog by calling shell32.dll
						fixed memory and GDI handle leaks
						implemented context menus for task bar
						tool tips for quick launch bar
24.08.2003	m. fuchs	added reactos logo to startmenu
						added romanian translation of Ciobanu Alexander
26.08.2003	m. fuchs	implemented tooltips and launching of date/time control panel applet for clock display
27.08.2003	m. fuchs	partly implemented control panel window
28.08.2003	m. fuchs	control panel window in cabinet view mode
29.09.2003	m. fuchs	Now we handle start menu popups via StartMenuRoot::TrackStartmenu().
30.09.2003	m. fuchs	compatibility to building as Winelib application
10.09.2003	m. fuchs	compatibility changes for correct desktop windows size on Windows NT
19.09.2003	m. fuchs	compatibility changes for correct start menu subentries on Windows 9x
27.09.2003	m. fuchs	moved start menu entries for control panel, etc. into new settings submenu
						created a Makefile for compiling as standalone project using MinGW
						eliminated all warnings displayed when using -Wall
						activated option for compiling as UNICODE version