@@ -38,3 +38,4 @@
 						created a Makefile for compiling as standalone project using MinGW
 						eliminated all warnings displayed when using -Wall
 						activated option for compiling as UNICODE version
+						merged start menus of the same name (e.g. "All Users\Startup" with "<User>\Startup")
